[package]
name = "sessiondriver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "= 1.44.1", features = ["rt-multi-thread", "tokio-macros", "tracing", "process", "signal", "sync"] }
log = "= 0.4.27"
env_logger = "= 0.11.7"
clap = { version = "= 4.5.34", features = ["derive", "env"] }
axum = { version = "= 0.8.3", features = ["macros"] }
humantime = "= 2.2.0"
async-lock = "= 3.4.0"
reqwest = { version = "= 0.12.15", features = ["stream", "json", "rustls-tls", "charset", "http2"], default-features = false }
serde = { version = "= 1.0.219", features = ["derive"] }
serde_json = "= 1.0.140"
uuid = { version = "= 1.16.0", features = ["serde"] }
fantoccini = { version = "= 0.21.5", features = ["rustls-tls"], default-features = false }
deadpool = "= 0.12.2"
rustls = { version = "= 0.23.25", features = ["ring"] }